--- a/docs/src/getting-started/getting-linuxcnc.adoc
+++ b/docs/src/getting-started/getting-linuxcnc.adoc
@@ -5,10 +5,9 @@
 
 = Getting LinuxCNC
 
-This section describes the recommended way to download
-and make a fresh install of LinuxCNC.  There are also
-<<_alternate_install_methods,Alternate Install Methods>> for the
-adventurous.  If you have an existing install that you want to upgrade,
+This section describes the recommended way to download and make a fresh install of LinuxCNC.
+There are also <<_alternate_install_methods,Alternate Install Methods>> for the adventurous.
+If you have an existing install that you want to upgrade,
 go to the <<cha:updating-linuxcnc,Updating LinuxCNC>> section instead.
 
 NOTE: LinuxCNC requires a special kernel with real-time extensions. There are
@@ -31,22 +30,23 @@ The outline of the process looks like this:
 . Boot the Live system to test out LinuxCNC.
 . Boot the Installer to install LinuxCNC.
 
-
 == Download the image
 
-This section describes some methods for downloading the Live/Install
-Image.
-
+This section describes some methods for downloading the Live/Install image.
 
 === Normal Download
 
-For x86 PCs Download the Live/Install CD by clicking here:
+Software for LinuxCNC to download is presented on the project's
+https://linuxcnc.org/downloads/[Downloads page].
+Most users will aim for the disk image Intel/AMD PCs, the URL
+will resemble https://www.linuxcnc.org/iso/linuxcnc_2.9.2-amd64.hybrid.iso.
 
-https://www.linuxcnc.org/iso/linuxcnc_2.9.2-amd64.hybrid.iso
+For the Raspberry Pi, multiple images are provided to address
+differences between the RPi4 and RPi5.
 
-For the Raspberry Pi a complete SD card image is available here:
-
-https://www.linuxcnc.org/iso/linuxcnc-2.9.2-bookworm-rpi4.img.xz
+NOTE: Do not use the regular Raspbian distribution for LinuxCNC that may have shipped with
+your RPi starter kit - that will not have the real-time kernel and you cannot
+migrate from Raspbian to Debian's kernel image.
 
 === Download using zsync
 
@@ -71,10 +71,9 @@ zsync https://www.linuxcnc.org/iso/linuxcnc_2.9.2-amd64.hybrid.iso
 
 .zsync in Windows
 
-There is a Windows port of zsync. It works as a console application. It can be
-downloaded from:
-
-https://www.assembla.com/spaces/zsync-windows/documents
+There is a Windows port of zsync.
+It works as a console application and can be downloaded from
+https://www.assembla.com/spaces/zsync-windows/documents .
 
 === Verify the image
 
@@ -123,6 +122,9 @@ written to an SD card with the [Raspberry Pi Imager App](https://www.raspberrypi
 
 Download and install [Balena Etcher](https://etcher.balena.io/#download-etcher)
 (Linux, Windows, Mac) and write the downloaded image to a USB drive.
+
+If your image fails to boot then please also try https://rufus.ie/[Rufus].
+It looks more complicated but seems to be more compatible with various BIOSes.
 
 === Command line - Linux
 
@@ -242,7 +244,7 @@ during the boot up.
 The easiest, preferred way to install LinuxCNC is to use the Live/Install Image as described above.
 That method is as simple and reliable as we can make it, and is suitable for novice users and experienced users alike.
 However, this will typically replace any existing operating system.
-If hou have files on the target PC that you want to keep, then use one of the methods described in this section.
+If you have files on the target PC that you want to keep, then use one of the methods described in this section.
 
 In addition, for experienced users who are familiar with Debian system administration
 (finding install images, manipulating apt sources, changing kernel flavors, etc), new installs are supported on following platforms:
@@ -262,15 +264,15 @@ NOTE: LinuxCNC v2.9 is not supported on Debian 9 or older.
 
 .Preempt-RT kernels
 
-The Preempt-rt kernels are available for Debian from the regular
-debian.org archive. The package is called `linux-image-rt-*`
+The Preempt-rt kernels are available for Debian from the regular debian.org archive.
+The package is called `linux-image-rt-*`.
 Simply install the package in the same way as any other package from the
 Synaptic Package manager or with apt-get at the command-line.
 
 .RTAI Kernels
 
-The RTAI kernels are available for download from the linuxcnc.org
-debian archive.  The apt source is:
+The RTAI kernels are available for download from the linuxcnc.org debian archive.
+The apt source is:
 
 * Debian Bookworm: `deb http://linuxcnc.org bookworm base`
 * Debian Bullseye: `deb http://linuxcnc.org bullseye base`
@@ -321,7 +323,7 @@ uname -v
 ----
 
 . Open Applications Menu > System > Synaptic Package Manager search for
-  'linux-image' and right click on the original non-rt  and select
+  'linux-image' and right click on the original non-rt and select
   'Mark for Complete Removal'. Reboot.
   This is to force the system to boot from the RT kernel. If you prefer
   to retain both kernels then the other kernels need not be deleted, but
@@ -364,9 +366,8 @@ kernel.
 
 === Installing on Raspbian 12
 
-. Download a stock Raspbian image to an SD card and install using the
-  [Raspberry Pi Imager App](https://www.raspberrypi.com/software/)
-. Boot the Pi and open a terminal. Download and run the linuxcnc installer
-  script as described above.
+Don't. The latencies are too bad with the default kernel and the PREEMPT_RT (the RT is important) kernel of Debian does not boot on the Pi (as of 1/2024).
+Please refer to the images provided online.
+You can create them yourself following the scripts provided https://github.com/rodw-au/rpi-img-builder-lcnc[online].
 
 // vim: set syntax=asciidoc:
