--- a/docs/src/man/man1/mqtt-publisher.1.adoc
+++ b/docs/src/man/man1/mqtt-publisher.1.adoc
@@ -100,23 +100,20 @@ loadusr -W mqtt-publisher \
 halui.axis.c.pos-feedback,halui.axis.u.pos-feedback,\
 halui.axis.v.pos-feedback,halui.axis.w.pos-feedback,\
 halui.axis.x.pos-feedback,halui.axis.y.pos-feedback,\
-halui.axis.z.pos-feedback \
-  keys=halui.estop.is-activated, halui.joint.0.is-homed,\
-halui.joint.1.is-homed,halui.joint.2.is-homed,halui.joint.3.is-homed,\
-halui.joint.4.is-homed,halui.joint.5.is-homed,halui.joint.6.is-homed,\
-halui.joint.7.is-homed,halui.joint.8.is-homed \
-  keys=halui.machine.is-on,halui.max-velocity.value,halui.mode.is-auto,
-halui.mode.is-manual,halui.mode.is-mdi,halui.mode.is-teleop,
+halui.axis.z.pos-feedback,halui.estop.is-activated,\
+halui.joint.0.is-homed,halui.joint.1.is-homed,halui.joint.2.is-homed,\
+halui.joint.3.is-homed,halui.joint.4.is-homed,halui.joint.5.is-homed,\
+halui.joint.6.is-homed,halui.joint.7.is-homed,halui.joint.8.is-homed,\
+halui.machine.is-on,halui.max-velocity.value,halui.mode.is-auto,\
+halui.mode.is-manual,halui.mode.is-mdi,halui.mode.is-teleop,\
 halui.program.is-running
+
 ----
 
 Note: It is recommended to use the line continuation character "\" as
 shown here to improve readability. But note that spaces must be left in
 to delimit options, and must not be included (including at the beginning
 of a line) inside a single option.
-
-HAL limits a single option/token (for example "keys=") to 255 characters.
-To work around this issue use multiple "keys=" entries as shown.
 
 == SEE ALSO
 
